# dot-emacs

./: #init.org#  .README.md.texinfo.pandoc  .bumpversion.cfg  .cvsignore  .dir-locals.el  .editorconfig  .elpaignore  .emacs  .emacs.el  .ert-runner  .ghci  .gitattributes  .gitignore  .gitmodules  .gnus.el  .hgignore  .hlint.yaml  .jpmignore  .org.el  .travis.yml  .xpiignore  AGENTS.md  AUTHORS  BUGS  CHANGELOG.md  CHANGELOG.org  CHANGES  CHANGES.md  CODE_OF_CONDUCT.md  COMPATIBILITY  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  Cask  ChangeLog  ChangeLog-preview  ChangeLog.1  ChangeLog.2  Changes  DEVEL  (+507 more)
override/bbdb/: ChangeLog  NEWS  autogen.sh  configure.ac
override/bbdb/tex/: Makefile.am  bbdb-cols.tex
override/gnus/: .arch-inventory  ChangeLog  Makefile.in  README  configure  configure.in  mkinstalldirs
override/gnus/contrib/: ChangeLog  README  compface.el  gnus-kill-to-score.el  smime-card.el  vcard.el
override/gnus/etc/: gnus-tut.txt
override/gnus/lisp/: ChangeLog.1  ChangeLog.2  assistant.el  color.el  dgnushack.el  gmm-utils.el  gnus-art.el  gnus-compat.el  gnus-salt.el  gnus-sync.el  gnus-xmas.el  gnus.el  lpath.el  message.el  messagexmas.el  nnheaderxm.el  parse-time.el  proto-stream.el  registry.el  sha1.el  smime-ldap.el
override/gnus/lisp/gnus-fallback-lib/: json.el
override/gnus/lisp/tests/: gnustest-nntp.el
override/gnus/texi/: ChangeLog  Makefile.in  auth.texi  dir  emacs-mime.texi  gnus.texi  gnusconfig.tex.in  message.texi  pagestyle.sty  postamble.tex  splitindex  texi2latex.el
override/gnus/texi/etc/: gnus-summary-catchup-up.xpm  gnus-summary-mail-copy-up.xpm  gnus-summary-mail-forward-up.xpm  gnus-summary-mail-get-up.xpm  gnus-summary-mail-originate-up.xpm  gnus.xpm
override/gnus/texi/herds/: convol11.pnm  convol5.pnm
override/gnus/texi/misc/: eseptember.tif  fred.tif  fseptember.tif  red.ps
override/gnus/texi/picons/: cygnus.xbm  gov.xbm  qmw.xbm  ruu.xbm  seuu.xbm  ubc.xbm  upenn.xbm  yale.xbm
override/gnus/texi/ps/: Makefile.in  gnus-head.eps
override/gnus/texi/smilies/: BigFace.tif  FaceAngry.xpm  FaceDevilish.xpm  FaceGoofy.xpm  FaceGrinning.xpm  FaceHappy.xpm  FaceIronic.xpm  FaceKOed.xpm  FaceNyah.xpm  FaceSad.xpm  FaceStartled.xpm  FaceTalking.xpm  FaceTasty.xpm  FaceWinking.xpm  FaceWry.xpm  FaceYukky.xpm  WideFaceAse2.xbm  WideFaceSmile.xbm  WideFaceWeep.xbm
override/gnus/www/: ChangeLog
override/gnus/www/git.gnus.org/: index.html
override/tramp-2.2.10/: .dir-locals.el  ChangeLog  INSTALL  MANIFEST  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  download.sh
override/tramp-2.2.10/contrib/: ChangeLog
override/tramp-2.2.10/lisp/: ChangeLog  Makefile  Makefile.in  tramp-efs.el  tramp-loaddefs.el  trampver.el.in
override/tramp-2.2.10/test/: ChangeLog  Makefile  README
override/tramp-2.2.10/texi/: ChangeLog  Makefile  Makefile.in  test.texi  tramp-emacs.html  tramp-xemacs.html  tramp.dvi  tramp.texi  trampinst.texi  trampver.texi  trampver.texi.in
site-lisp/HaRe/hareview/: CHANGES  HACKING  INSTALL  TODO  hareview.cabal
site-lisp/HaRe/hareview/data/: EX3.hs.txt  EX4.hs.txt  astview-tmpl.html  hareview.glade  hareview1.glade  style.css
site-lisp/HaRe/hareview/keep/: Parsers.hs  README
site-lisp/HaRe/hareview/src/: .ghci
site-lisp/auctex/: .cvsignore  .gitignore  CHANGES  ChangeLog  ChangeLog-preview  FAQ  INSTALL  INSTALL.windows  Makefile  Makefile.in  RELEASE  TODO  aclocal.m4  auto-loads.el  config.status  configure  configure.ac  context-nl.el  context.el  font-latex.el  latex.el  lpath.el  multi-prompt.el  preview-latex.el  preview.el  preview.el.in  prv-install.el  prv-xemacs.el  tex-buf.el  tex-fold.el  tex-font.el  tex-info.el  tex-jp.el  tex-site.el  tex-site.el.out  tex.el  toolbar-x.el
site-lisp/auctex/doc/: .gitignore  Makefile  auctex.info  auctex.info-1  auctex.info-2  auctex.texi  changes.texi  install.texi  preview-dtxdoc.texi  preview-latex.info  quickstart.texi  tex-ref.tex  todo.texi  version.texi  wininstall.texi
site-lisp/auctex/latex/: preview-mk.ins  preview.drv  preview.dtx  preview.sty
site-lisp/auctex/style/: Alegreya.el  AlegreyaSans.el  AnonymousPro.el  FiraSans.el  MyriadPro.el  XCharter.el  alltt.el  amsfonts.el  amsmath.el  amsthm.el  array.el  attachfile.el  beamer.el  bicaption.el  bidi.el  caption.el  colortbl.el  comment.el  currvita.el  dinbrief.el  empheq.el  enumitem.el  environ.el  epsf.el  erewhon.el  eso-pic.el  expl3.el  fancyhdr.el  fancyvrb.el  fbb.el  filecontents.el  fontaxes.el  fontenc.el  fontspec.el  fvextra.el  geometry.el  graphics.el  graphicx.el  harvard.el  hologo.el  (+49 more)
site-lisp/doxymacs/: AUTHORS  ChangeLog  INSTALL  README  configure.ac  elisp-comp
site-lisp/doxymacs/c/: Makefile.am  doxymacs_parser.c
site-lisp/doxymacs/example/src/: aclass.h
site-lisp/doxymacs/lisp/: Makefile.am  doxymacs.el.in
site-lisp/doxymacs/no-autoconf/: Makefile.am
site-lisp/flycheck-haskell/test/: cabal.sandbox.config  flycheck-haskell-test.cabal  flycheck-haskell-test.el
site-lisp/mmm-mode/: .gitignore  AUTHORS  ChangeLog  Checklist  Makefile.am  NEWS  README.Mason  acinclude.m4  autogen.sh  mmm-class.el  mmm-cmds.el  mmm-mason.el  mmm-mode.el  mmm-sample.el  mmm-vars.el
site-lisp/mmm-mode/tests/: html-erb.el
site-lisp/org-merge-driver/tests/: Makefile.am  check_doc_merge.c  check_list_diff.c  check_parser.c  test.org
site-lisp/site-bbdb/bbdb/lisp/: Makefile.am  bbdb-pkg.el.in  (+1 more)
site-lisp/site-org/org-merge-driver/: .gitignore  AUTHORS  Doxyfile  configure.ac
src/: Actions.hs  Args.hs  HsenvMonad.hs  Makefile.am  Paths.hs  Process.hs  Skeletons.hs  batch.el  cl-arrays.el  cl-environment.el  cl-eval.el  cl-hash.el  cl-iteration.el  cl-numbers.el  cl-objects.el  cl-sequences.el  cl-streams.el  cl-strings.el  cl-subtypep.el  cl-typep.el  cl-types.el  doc_ref.c  emms-print-metadata.c  emms-print-metadata.cpp  hsenv.hs  org_heading.c  smerger.c  string_merge.h  typ-default-annotations.el  typ-private.el  typ-public.el
src/Util/: IO.hs  StaticArrowT.hs  Template.hs
src/Util/Args/: .ghci  ArgDescr.hs  GetOpt.hs  Usage.hs
(+8068 files in other folders)
